<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activities.Main.Fragments.LoginFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:stretchColumns="3" >

        <TableRow>
            <TextView
                android:id="@+id/serverHostPrompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/serverHost" />

            <EditText
                android:id="@+id/serverHostField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:inputType="textNoSuggestions"
                tools:text="1.0.2.2" />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/serverPortPrompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/serverPort" />

            <EditText
                android:id="@+id/serverPortField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:inputType="number"
                tools:text="8080" />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/usernamePrompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/username" />

            <EditText
                android:id="@+id/usernameField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:inputType="textNoSuggestions"
                tools:text="conManRad" />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/passwordPrompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/password" />

            <EditText
                android:id="@+id/passwordField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:inputType="textPassword"
                tools:text="a password" />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/firstNamePrompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/firstName" />

            <EditText
                android:id="@+id/firstNameField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:inputType="textPersonName"
                tools:text="Conrad" />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/lastNamePrompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/lastName" />

            <EditText
                android:id="@+id/lastNameField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:inputType="textPersonName"
                tools:text="Schoenberg" />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/emailPrompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/email" />

            <EditText
                android:id="@+id/emailField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:inputType="textEmailAddress"
                tools:text="radconman@goomail.com" />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/genderPrompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/gender" />

            <EditText
                android:id="@+id/genderField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:inputType="text"
                tools:text="FIXME - gender radio here" />
        </TableRow>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">
            <!--    android:layout_margin="16dp"-->
            <!--    tools:context=".MainActivity">-->

            <Button
                android:id="@+id/signInButton"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:text="@string/signInButton" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:text="@string/registerButton"/>
        </LinearLayout>

    </TableLayout>
</ScrollView>
