<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activities.Person.PersonActivity" >

    <TextView
        android:id="@+id/firstNameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="8dp"
        android:textSize="18sp"
        android:text="@string/single_string"
        android:textStyle="bold"
        android:gravity="start"/>

    <TextView
        android:id="@+id/firstNamePrompt"
        android:paddingHorizontal="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/person_first_name_prompt"
        android:gravity="start"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/lastNameField"
        android:paddingHorizontal="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/single_string"
        android:gravity="start"/>

    <TextView
        android:id="@+id/lastNamePrompt"
        android:paddingHorizontal="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/person_last_name_prompt"
        android:gravity="start"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/darker_gray"/>


    <TextView
        android:id="@+id/genderField"
        android:paddingHorizontal="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/single_string"
        android:gravity="start"/>

    <TextView
        android:id="@+id/genderPrompt"
        android:paddingHorizontal="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/person_gender_prompt"
        android:gravity="start"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/darker_gray"/>

    <ExpandableListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/expandable_list_view"
        android:indicatorLeft="?android:attr/expandableListPreferredChildIndicatorLeft"
        android:dividerHeight="0.5dp"
        android:divider="@android:color/darker_gray"
        android:layout_marginHorizontal="8dp" />

</LinearLayout>